--- a/Serializer.Generator/Serializer.Generator.csproj
+++ b/Serializer.Generator/Serializer.Generator.csproj
@@ -14,7 +14,7 @@
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
     </ItemGroup>
     
-    <ItemGroup>
-      <ProjectReference Include="..\Serializer\Serializer.csproj" />
-    </ItemGroup>
+<!--    <ItemGroup>-->
+<!--      <ProjectReference Include="..\Serializer\Serializer.csproj" />-->
+<!--    </ItemGroup>-->
 </Project>
